<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Mobile Vikings for Android</string>
    <string name="widget_label_1x1">Mobile Vikings for Android (1x1)</string>
    <string name="widget_label_2x1">Mobile Vikings for Android (2x1)</string>
    <string name="title_credit">Credit</string>
    <string name="title_usage">Usage</string>
    <string name="title_topups">Top-ups</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="credentials">Credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_frequency">Frequency</string>
    <string name="settings_frequency">Application will update every %s.</string>
    <string name="select_msisdn">Select number</string>
    <string name="select_msisdn_click">Click to select number</string>
    <string name="settings_select_msisdn">Number %s will be used.</string>
    <string name="update_msisdns">Update phone number list</string>
    <string name="msisdn_not_set">Phone number not set</string>
    <string name="widget_action">Widget tap action</string>
    <string name="settings_widget_action">%s when the widget is tapped.</string>
    <string name="settings_widget_background">Widget background color: %s</string>
    <string name="widget_background">Widget color</string>
    <string name="settings_other">Other settings</string>
    <string name="debug">Debugging</string>
    <string name="settings_set_debug_enabled">Debugging enabled.</string>
    <string name="settings_set_debug_disabled">Debugging disabled.</string>
    <string name="update">Update</string>
    <string name="remaining">%s remaining</string>
    <string name="megabytes_remaining">%s MB remaining</string>
    <string name="sms_remaining">%s SMSs remaining</string>
    <string name="sms_son_remaining">%s SMSs to Mobile Vikings remaining</string>
    <string name="valid_until">Valid until %s</string>
    <string name="at_hour">at</string>
    <string name="price_plan">Plan: %s</string>
    <string name="megabytes">%s MB</string>
    <string name="kilobytes">%s KB</string>
    <string name="login_title">Login to Mobile Vikings</string>
    <string name="exception_message">Could not connect to API. Make sure your internet connection is working.</string>
    <string name="exception_msisdn_message">Phone number not set. Please select a phone number in the settings.</string>
    <string name="exception_badlogin_message">Wrong login and/or password.</string>
    <string name="topup">Top-up (SMS)</string>
    <string name="error_sms">Error sending sms. Check your remaining credit and try again.</string>
    <string name="confirm_topup">Are you sure you want to topup %s€ via SMS?</string>
    <string name="res_positive">Yes</string>
    <string name="res_negative">No</string>
    <string name="res_cancel">Cancel</string>
    <string name="res_ok">OK</string>
    <string name="choose_amount">Choose amount</string>
    <string name="topup_sent">Topup request sent</string>
    <string name="nodata">No data</string>
    <string name="loading">Loading...</string>
    <string name="delete_credentials">Delete credentials</string>
    <string name="delete_credentials_confirm">Do you really want to delete credentials?\nThis cannot be undone.\nYou\'ll need to enter your username and password again to be able to use this application.</string>
    <!-- Appwidget test -->
    <string name="appwidget_configure_instructions">This text will be shown before the date in our example widget.</string>
    <string name="appwidget_prefix_default">Oh hai</string>
    <string name="appwidget_text_format"><xliff:g id="prefix">%1$s</xliff:g>: <xliff:g id="time">%2$s</xliff:g></string>

    <!-- *********** -->
    <!-- Preferences -->
    <!-- *********** -->
    <string name="pref_auto_credit">Credit</string>
    <string name="pref_auto_credit_enabled">Credit info will be automatically updated.</string>
    <string name="pref_auto_credit_disabled">Credit info will not be automatically updated.</string>
    <string name="pref_auto_usage">Usage</string>
    <string name="pref_auto_usage_enabled">Usage info for the present day will be automatically updated.</string>
    <string name="pref_auto_usage_disabled">Usage info for the present day will not be automatically updated.</string>
    <string name="pref_auto_topups">Top-ups</string>
    <string name="pref_auto_topups_enabled">Top-up info will be automatically updated.</string>
    <string name="pref_auto_topups_disabled">Top-up info will not be automatically updated.</string>
    <string name="pref_debugging">Debugging</string>
    <string name="pref_debugging_enabled">Debugging enabled</string>
    <string name="pref_acra_disabled">Error reporting disabled</string>
    <string name="pref_acra_enabled">Error reporting enabled</string>
    <string name="pref_debugging_disabled">Debugging disabled</string>
    <string name="pref_disable_acra">Error reporting</string>
    <string name="pref_acra_user_email">Email address</string>
    <string name="pref_acra_user_email_summary">Email address to use when reporting a crash</string>

</resources>