<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/update_msisdns"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/update_msisdns"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/settings"/>
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/update"/>

</menu>